<resources>
    <string name="app_name">Tbee3</string>
    <string name="hello_world">Hello world!</string>
	<string name="action_settings">Settings</string>
	<string name="product_desc1">Friends, today’s design share is a realistic mockup PSD file of an iMac 27″ recently released by Apple. The mockup is a clean vector file that you can easily edit and add your own designs and graphics on the screen.</string>
	<string name="product_desc2">Created with full vector shapes and smart objects, the mockup is a fully scalable file.  The iMac template is designed on a 7000 pixels background, large enough to showcase your designs on the screen.</string>
    <string name="product_desc3">Well, you are welcome to post your views on this freebie in the comments box.  You may like to download similar freebie iPhone 5 black and white blank templates (PSD).</string>
	<string name="packages">Packages</string>
	<string name="contact">Contact</string>
	<string name="change_language">Switch Language</string>
	<string name="change_number">Change Number</string>
	<string name="contact_email">Contact email</string>
	<string name="contact_phone">Contact No</string>
	<string name="user_name">User name</string>
	<string name="facebook">Facebook</string>
	<string name="instagram">Instagram</string>
	<string name="twitter">Twitter</string>
	<string name="skype">Skype</string>
	<string name="phone_number">Phone Number</string>
	<string name="back">Back</string>
	<string name="subcategories">Subcategories</string>
	<string name="categories">Categories</string>
	<string name="price_starts_at">Bid starts at KD</string>
	<string name="no_credit_to_post_product">You dont have any credit to post new product</string>
	<string name="update_social">Update profile</string>
	<string name="profile">User Profile</string>
	<string name="can_not_start_chat_with_self">You can not start a chat with yourself</string>
	<string name="key_select_bid">Selling Options</string>
	<string name="key_fixed_price">Fixed Price</string>
	<string name="key_accept_offer">Accept Offers</string>
	<string name="key_no_bid">Make a bid</string>
	<string name="key_price_start">Minimum</string>
	<string name="key_price_end">Maximum</string>
	<string name="to">To</string>
	<string name="cancel_filter">Back</string>
	<string name="please_select_bid_option">Please select selling option</string>
	<string name="please_select_condition">Please select product condition</string>
	<string name="amount">Amount</string>
	<string name="product_title">Product Title</string>
	<string name="product_description">Product Description</string>
	<string name="product_price">Price</string>
	<string name="condition_new">New</string>
	<string name="condition_old">Mint Condition</string>
	<string name="condition_working">Used</string>
	<string name="condition_not_working">Need to fix</string>
	<string name="extra_attributes">Extra Attributes</string>
	<string name="select_condition">Condidition</string>
	<string name="key_select_category">Category</string>
	<string name="select_sub_category">Subcategory</string>
	<string name="add_image">Add Image</string>
	<string name="packages_list">List of Packages</string>
	<string name="enter_phone_number">Please enter your phone number</string>
	<string name="select_source">Select source</string>
	<string name="select_source_text">Select source to get image</string>
	<string name="camera">Camera</string>
	<string name="gallery">Photo Gallery</string>
	<string name="select_user_name">Please select user name</string>
	<string name="select_user_password">Please select user password</string>
	<string name="select_user_image">Please select profile image</string>
	<string name="key_joined">Joined</string>
	<string name="key_posted">Posted</string>
	<string name="key_sold">Total Sold</string>
	<string name="key_user_profile">User Profile</string>
	<string name="key_post_per_month">Posts per month</string>
	<string name="key_gallery">Gallery</string>
	<string name="key_pictures">No of Pictures</string>
	<string name="key_pinned">Pinned</string>
	<string name="key_bio">Bio/Location/Website</string>
	<string name="key_instagram">Instagram Posts</string>
	<string name="key_features">Featured</string>
	<string name="key_price">Price</string>
	<string name="key_yes">Yes</string>
	<string name="key_no">No</string>
	<string name="key_purchase">Purchase</string>
	<string name="key_activated">Activated</string>
	<string name="not_available">Not Available</string>
	<string name="key_wishlist">Favorite</string>
	<string name="key_update">Update</string>
	<string name="key_offer_price_title">Offer price</string>
	<string name="key_offer_price_text">Please enter offer price</string>
	<string name="please_add_image">Please add an image</string>
	<string name="credits">Credits</string>
	<string name="days_left">Days Left</string>
	<string name="phone_number_missing">Phone number is not set for this ad</string>
	<string name="can_not_send_SMS">SMS can not be sent from this device</string>
	<string name="please_select_at_least_one_image">Please select at least one image to make the post</string>
	<string name="account_limit_over">Your current pacakge does not allow any more images. Please upgrade your package.</string>
	<string name="account_gallery_not_available">Your package does not allow to use gallery</string>
	<string name="category_latest">Latest</string>
	<string name="category_all">All</string>
	<string name="make_offer_not_available">Making offers is disabled for this product</string>
	<string name="offers_not_available">Offers are not available</string>
	<string name="no_extra_attributes">No extra Attributes</string>
	<string name="offers">Offers</string>
	<string name="comments">Comments</string>
	<string name="add_comment">Add new comment</string>
	<string name="comment_title">Add Comment</string>
	<string name="comment_text">Enter your comment about this product</string>
	<string name="title_wanted">Wanted</string>
	<string name="add_wanted">Add Wanted Item</string>
	<string name="save">Save</string>
	<string name="keywords">Keywords</string>
	<string name="search_text">Search for</string>
	<string name="price_from">Price From</string>
	<string name="price_to">Price To</string>
	<string name="compulsory_title">Please enter product title</string>
	<string name="compulsory_keywords">Please enter keywords</string>
	<string name="compulsory_price_from">Please enter minimum price</string>
	<string name="compulsory_price_to">Please enter maximum price</string>
	<string name="compulsory_condition">Please select condition</string>
	<string name="compulsory_category">Please select category</string>
	<string name="sucessful_wanted_created">You will get notified once someone post your required item</string>
	<string name="need_make_offers">Need offers?</string>
	<string name="delete_offer_confirmation">Are you sure you want to remove this offer?</string>
	<string name="confirmation">Confirmation</string>
	<string name="delete">Delete</string>
	<string name="delete_product_confirmation">Are you sure you want to delete this product ?</string>
	<string name="title_notification">Notifications</string>
	<string name="offer_should_be_greater">Offer price should be greater than existing offers</string>
	<string name="delete_wanted_item_confirmation">Are you sure you want to delete this item ?</string>
	<string name="no_product">There are no products matching these conditions</string>
	<string name="payment_error">Error occured while making pamyent</string>
	<string name="title_payment">Payment</string>
	<string name="chat_messages">Chat Messages</string>
	<string name="home_description">Navigate home</string>
	<string name="home_description_format">%1$s, %2$s</string>
	<string name="home_subtitle_description_format">%1$s, %2$s, %3$s</string>
	<string name="up_description">Navigate up</string>
	<string name="done">Done</string>
	<string name="activitychooserview_choose_application">Choose an app</string>
	<string name="searchview_description_clear">Clear query</string>
	<string name="searchview_description_query">Search query</string>
	<string name="searchview_description_search">Search</string>
	<string name="title_filter">Filter</string>
	<string name="searchview_description_submit">Submit query</string>
	<string name="searchview_description_voice">Voice search</string>
	<string name="shareactionprovider_share_with">Share with</string>
	<string name="shareactionprovider_share_with_application">Share with %s</string>
	<string name="toolbar_collapse_description">Collapse</string>
	<string name="account_delete_success">your account has been deleted</string>
	<string name="settings">Settings</string>
	<string name="add_description">add description</string>
	<string name="add_photos">Add Photos</string>
	<string name="add_price">Add price</string>
	<string name="add_tittle">Add title</string>
	<string name="added_to_wishlist">Product Added To The Favorite</string>
	<string name="alternative_phone_number">alternative phone number</string>
	<string name="cancel">Cancel</string>
	<string name="check_connection">Please check your internet connection and try again....</string>
	<string name="contact_us">Contact Us</string>
	<string name="currency_symbol">KD</string>
	<string name="delete_account">do you want to delete account?</string>
	<string name="drag_text">Drag to rearrange images , first image is primary image</string>
	<string name="email">Email</string>
	<string name="enter_product_title">Enter Product Title</string>
	<string name="enter_product_detals">Enter Product Details</string>
	<string name="enter_some_text">Enter Some Text</string>
	<string name="enter_verification_code">Enter Code</string>
	<string name="enter_your_details">Enter Your Details</string>
	<string name="message">message</string>
	<string name="mobile">Mobile</string>
	<string name="more">More</string>
	<string name="msg_sent_to_mobile">We have sent a verification code to your mobile number</string>
	<string name="my_account">My Account</string>
	<string name="my_adds">My Advs</string>
	<string name="my_favorates">My Favorites</string>
	<string name="name">Name</string>
	<string name="no_items">no items in this category</string>
	<string name="no_result">No Results Found</string>
	<string name="ok">OK</string>
	<string name="photo_gallery">photo gallery</string>
	<string name="please_add_description">please enter description</string>
	<string name="please_add_price">please enter the price</string>
	<string name="please_add_some_photos">Please add some images</string>
	<string name="please_enter_phone">please enter alternative phone number</string>
	<string name="please_enter_tittle">please add a title</string>
	<string name="please_select_catageory">please select a catageory</string>
	<string name="please_wait_text">please wait loading… </string>
	<string name="post">Post Ad</string>
	<string name="post_success">Your ad uploaded successfully</string>
	<string name="preview">Preview</string>
	<string name="qatar">Qatar</string>
	<string name="register">Register</string>
	<string name="registration">Registration</string>
	<string name="search">Search</string>
	<string name="select_category">Select Category</string>
	<string name="select_product">Select Product</string>
	<string name="send">Send</string>
	<string name="success">Success!</string>
	<string name="take_photo">take photo</string>
	<string name="try_again">please try again later!</string>
	<string name="type_your_complaint">Type your complaint here</string>
	<string name="un_sub_text">In the event of cancellation of the figure in the prpgram please check below to unsubscribe from the program and you can register againIn the event of cancellation of the figure in the prpgram please check below to unsubscribe from the program and you can reg</string>
	<string name="unsubscribe">Unsubscribe</string>
	<string name="zapply">Apply</string>
	<string name="zclear">Clear</string>
</resources>