<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/jhjgh">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swiperefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false">

    <GridView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/productsView"
        android:layout_gravity="center_horizontal"
        android:numColumns="2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />
    </android.support.v4.widget.SwipeRefreshLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="10dp"
        android:id="@+id/no_products"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView35"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/splash_logo"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No Products In This Category"
            android:id="@+id/textView24"
            android:textSize="20sp"
            android:textColor="@color/primary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="If you have recently updated your wishlist try to refresh this page"
            android:id="@+id/refresh_msg"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Refesh"
            android:id="@+id/refresh_btn"
            android:background="@color/price_color"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:padding="10dp"
            android:visibility="gone" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView6"
        android:background="#EAEAEA">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/filtering_options"
            android:orientation="vertical"
            android:visibility="visible"
            android:showDividers="middle"
            android:divider="@drawable/tall_empty_drawable" >

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/filtering_options_container"
            android:orientation="vertical"
            android:visibility="visible"
            android:showDividers="middle"
            android:divider="@drawable/tall_empty_drawable" >
    </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/borders_for_editbox_filter"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="5dp" >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_condition"
                        android:id="@+id/condition"
                        android:textColor="#000000" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center_vertical"
                        android:divider="@drawable/wide_empty_drawable"
                        android:showDividers="middle">

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/condition_new"
                            android:id="@+id/check_new"
                            android:button="@drawable/check_box_selector"
                            android:paddingLeft="2dp" />

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/condition_old"
                            android:id="@+id/check_mint"
                            android:button="@drawable/check_box_selector"
                            android:paddingLeft="2dp" />

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/condition_working"
                            android:id="@+id/check_used"
                            android:button="@drawable/check_box_selector"
                            android:paddingLeft="2dp" />

                    </LinearLayout>

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/condition_not_working"
                        android:id="@+id/check_need_repair"
                        android:button="@drawable/check_box_selector"
                        android:paddingLeft="2dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/borders_for_editbox_filter"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="5dp" >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/key_price"
                        android:id="@+id/textView139"
                        android:textColor="#000000" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center_vertical" >

                        <EditText
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/price_from"
                            android:singleLine="true"
                            android:inputType="number"
                            android:background="@drawable/borders_for_editbox_filter"
                            android:textSize="20sp"
                            android:padding="2dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/to"
                            android:id="@+id/textView141"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:textColor="#000000"
                            android:layout_gravity="center_vertical" />

                        <EditText
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/price_to"
                            android:singleLine="true"
                            android:inputType="number"
                            android:background="@drawable/borders_for_editbox_filter"
                            android:textSize="20sp"
                            android:padding="2dp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:layout_marginBottom="60dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zapply"
                    android:id="@+id/filter_apply_btn"
                    android:background="@drawable/apply_button_style"
                    android:textColor="#FFFFFF"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zclear"
                    android:id="@+id/filter_clear_btn"
                    android:background="@drawable/apply_button_style"
                    android:textColor="#FFFFFF"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_progress"
        android:layout_centerInParent="true" />

</RelativeLayout>